# aw-watcher-fitbit

./: pyproject.toml
aw_watcher_fitbit/: activity_tracker.py  main.py
